# docs/swagger.yaml
@@ -8,6 +8,20 @@ definitions:
       msg:
         type: string
     type: object
+  dtos.AuthInput:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    type: object
+  dtos.LoginReponse:
+    properties:
+      access_token:
+        type: string
+      user:
+        $ref: '#/definitions/ent.User'
+    type: object
   dtos.UserInput:
     properties:
       email:
@@ -35,6 +49,12 @@ definitions:
       lastName:
         description: LastName holds the value of the "lastName" field.
         type: string
+      location:
+        description: Location holds the value of the "location" field.
+        type: string
+      phone:
+        description: Phone holds the value of the "phone" field.
+        type: string
       status:
         description: Status holds the value of the "status" field.
         type: boolean
@@ -53,6 +73,106 @@ info:
   title: Golang Rest API
   version: "1.0"
 paths:
+  /api/v1/auth/login:
+    post:
+      parameters:
+      - description: User credentials
+        in: body
+        name: credentials
+        required: true
+        schema:
+          $ref: '#/definitions/dtos.AuthInput'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/app.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dtos.LoginReponse'
+              type: object
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/app.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+      summary: Login user
+      tags:
+      - Auth
+  /api/v1/auth/logout:
+    post:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/app.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Log out an user
+      tags:
+      - Auth
+  /api/v1/auth/me:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/app.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/ent.User'
+                  type: array
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Get authenticated user
+      tags:
+      - Auth
+  /api/v1/auth/refresh:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/app.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/dtos.LoginReponse'
+                  type: array
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/app.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: Refresh auth token
+      tags:
+      - Auth
   /api/v1/user:
     get:
       produces:
